# table_transfer

./: NOTICE  README.md  pyproject.toml
src/table_transfer/: __init__.py  helpers.py  table_transfer.py
